// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

import "config.proto";
import "user.proto";
import "metadata.proto";
import "virtual_schema.proto";

message DbIdTableName {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 db_id = 1;
  string table_name = 2;
}

// The identifier of a table by name. Names can be changed.
// There is no guarantee that two get-table request by name will return the same
// instance.
message TableNameIdent {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The user this table belongs to.
  string tenant = 1;

  // The database this table belongs to.
  string db_name = 2;

  // The table name.
  string table_name = 3;
}

// The identifier of a table.
// `table_id` will never change. It can only be created or removed.
// The `seq` indicates changes of the instance.
// I.e., the tuple `(db_id, seq)` always identifies the same instance.
message TableIdent {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 table_id = 1;

  // The seq of TableMeta
  uint64 seq = 2;
}


// TableMeta is a container of all non-identity information.
message TableMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Table schema, i.e., columns definition.
  DataSchema schema = 1;

  // Table catalog.
  //
  // We don't need to store catalog in table meta anymore.
  reserved 10;

  // Table engine.
  string engine = 6;

  // Database engine options, like github engine <token>.
  map<string, string> engine_options = 7;

  // Table options.
  map<string, string> options = 5;

  // Keys to sort rows in table.
  optional string cluster_key = 9;

  // The vector of cluster keys.
  repeated string cluster_keys = 4;

  // A sequential number that uniquely identifies changes to the cluster key.
  optional uint32 cluster_key_seq = 8;

  // The time table created.
  string created_on = 20;

  // The time table updated.
  string updated_on = 21;

  // Comment about this table.
  string comment = 22;

  // Statistics of this table.
  optional TableStatistics statistics = 23;

  // The time table dropped.
  optional string drop_on = 24;

  // Comments of each field.
  repeated string field_comments = 25;

  // Table storage location connection info.
  optional StorageConfig storage_params = 26;

  optional string part_prefix = 27;

  repeated uint64 shared_by = 28;

  map<string, string> column_mask_policy = 29;

  // Now the owner is stored independently in the meta. Prefix with __fd_object_owners
  // optional Ownership owner = 30;
  reserved 30;

  map<string, TableIndex> indexes = 31;
  // The schema of virtual columns.
  VirtualDataSchema virtual_schema = 32;
}

message TableIndex {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  enum IndexType {
    INVERTED = 0;
    NGRAM = 1;
    VECTOR = 2;
  }

  string name = 1;
  repeated uint32 column_ids = 2;

  // if true, index will create after data written to databend,
  // no need execute refresh index manually.
  bool sync_creation = 3;

  // if the index columns or options change,
  // the index data needs to be regenerated,
  // version is used to identify each change.
  string version = 4;

  // index options specify the index configs, like tokenizer.
  map<string, string> options = 5;

  // Type of table index: inverted, ngram
  IndexType index_type = 6;
}

// Save table name id list history.
message TableIdList {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  repeated uint64 ids = 1;
}

// The statistics of a table
message TableStatistics {

  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Number of rows
  uint64 number_of_rows = 1;

  // Size of data in bytes
  uint64 data_bytes = 2;

  // Size of compressed data in bytes
  uint64 compressed_data_bytes = 3;

  // Size of index data in bytes
  uint64 index_data_bytes = 4;

  // Number of segments
  optional uint64 number_of_segments = 5;

  // Number of blocks
  optional uint64 number_of_blocks = 6;
}

message DatabaseIdTableName {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The db id this table belongs to
  uint64 db_id = 1;

  // Table name
  string table_name = 2;
}

message TableCopiedFileInfo {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  optional string etag = 1;
  uint64 content_length = 2;
  optional string last_modified = 3;
}

message EmptyProto {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;
}
